admin controller added and authfixed